--- a/index.html
+++ b/index.html
@@ -73,8 +73,10 @@
                     <i class="fa fa-bars"></i>
                 </button>
                 <a class="navbar-brand" href="#brand">
-                    <img src="assets/images/logo.png" class="logo logo-display m-top-10" alt="">
-                    <img src="assets/images/logo.jpg" class="logo logo-scrolled" alt="">
+<!--                    <img src="assets/images/logo.png" class="logo logo-display m-top-10" alt="">-->
+<!--                    <img src="assets/images/logo.jpg" class="logo logo-scrolled" alt="">-->
+                    <span class="logo m-top-10 logo-display" style="color: white; font-weight: bold">SHORTR</span>
+                    <span class="logo m-top-10 logo-scrolled" style="color: #777; font-weight: bold">SHORTR</span>
                 </a>
             </div>
             <!-- End Header Navigation -->
@@ -276,7 +278,7 @@
                         </div>
                         <div class="testimonial_item">
                             <div class="col-sm-10 col-sm-offset-1">
-                                <p class="text-white">Créez un lien personnalisé pour de la forme monlien.shor.tr. </p>
+                                <p class="text-white">Créez un lien personnalisé de la forme monlien.shor.tr. </p>
 
                                 <div class="test_authour m-top-30">
 <!--                                    <h6 class="text-white m-bottom-20">JOHN DOE - THEMEFOREST USER</h6>-->
