--- a/index.html
+++ b/index.html
@@ -409,26 +409,26 @@
             <div class="row">
                 <div class="main_footer text-center p-top-40 p-bottom-10">
                     <p class="wow fadeInRight" data-wow-duration="1s">
-                        Made with
+                        Fait avec
                         <i class="fa fa-heart"></i>
-                        by
+                        par
                         <a href="">ShortR</a>
-                        2021. All Rights Reserved
+                        2021. Tous droits réservés
                     </p>
                 </div>
             </div>
 
-            <div class="row">
-                <div class="main_footer text-center p-top-20 p-bottom-20">
-                    <p class="wow fadeInRight" data-wow-duration="1s">
-                        Distributed
-                        <i class="fa fa-heart"></i>
-                        by
-                        <a target="" href="">ShortR</a>
-                        2016. All Rights Reserved
-                    </p>
-                </div>
-            </div>
+<!--            <div class="row">-->
+<!--                <div class="main_footer text-center p-top-20 p-bottom-20">-->
+<!--                    <p class="wow fadeInRight" data-wow-duration="1s">-->
+<!--                        Distributed-->
+<!--                        <i class="fa fa-heart"></i>-->
+<!--                        by-->
+<!--                        <a target="" href="">ShortR</a>-->
+<!--                        2021. All Rights Reserved-->
+<!--                    </p>-->
+<!--                </div>-->
+<!--            </div>-->
 
 
         </div>
